Revert "spring-newUI_onboard (#1289)" (#1305)
This reverts commit 249742f981a6c16783df1143def081f256591127.

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
@@ -17,34 +17,29 @@
 		"supportTopicIds": []
 	},
 	"categories": [{
-			"id": "availabilityandperformancespring",
+			"id": "AvailabilityAndPerformance",
 			"name": "Availability and Performance",
-			"description": "Investigate and discover issues that may impact your app availability.",
+			"description": "Is your app experiencing app downtime or slowness? Are your configurations for Config Server experiencing unresponsiveness? Investigate and discover issues that may impact your app availability.",
 			"keywords": ["Downtime", "Discovery", "Config Sever", "App Health", "Deploy Jar Artifact"],
 			"color": "rgb(208, 228, 176)",
-			"createFlowForCategory": true,
-			"chatEnabled": false,
-            "overviewDetectorId": "springAvailabilityAndPerformanceOverview"
-		},
-		{
-			"id": "configurationsandmanagementspring",
+			"createFlowForCategory": false,
+			"chatEnabled": false
+		}, {
+			"id": "ConfigurationsAndManagement",
 			"name": "Configurations and Management",
-			"description": "Discover issues with your own virtual network connectivity.",
+			"description": "Are you having issues exporting platform logs or distributed tracing? Are you having issue with some settings that you configured for your app? Find out if you misconfigured some features of Azure Spring Cloud, such as Log Analytics, App Insights, scaling, deployments and domain.",
 			"keywords": ["Log", "Metrics", "Distributed Tracing", "Scaling", "Swap", "Custom Domain", "SSL"],
 			"color": "rgb(249, 213, 180)",
-			"createFlowForCategory": true,
-			"chatEnabled": false,
-			"overviewDetectorId": "SpringConfigurationsManagementOverview"
-		}, 
-		{
-			"id": "networkingspring",
+			"createFlowForCategory": false,
+			"chatEnabled": false
+		}, {
+			"id": "Networking",
 			"name": "Networking",
-            "description": "Discover issues with your own virtual network connectivity.",
+            "description": "Are you having network connectivity issues when Azure Spring Cloud is deployed in your own virtual network? Find out if you misconfigured the Private DNS Zone, Custom DNS Server or blocked required outbound traffic in your VNet injected service instance.",
             "keywords": [ "Virtual Network", "Custom DNS Server", "Private DNS Zone", "Firewall" ],
 			"color": "rgb(208, 228, 176)",
-			"createFlowForCategory": true,
-			"chatEnabled": false,
-			"overviewDetectorId": "springNetworkOverview"
+			"createFlowForCategory": false,
+			"chatEnabled": false
 		}
 	],
 	"pesId": "16860"
