--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerservice/managedclusters/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerservice/managedclusters/config.json
@@ -1,7 +1,7 @@
 {
     "homePageText": {
         "title": "Azure Kubernetes Service Diagnostics (Preview)",
-        "description": "Use Azure Kubernetes Service Diagnostics (Preview) to investigate how your cluster is performing, diagnose issues, and discover how to improve its reliability. Select the problem category that best matches the information or tool that you're interested in:",
+        "description": "Investigate how your cluster is performing, diagnose issues, and discover how to improve its reliability.",
         "searchBarPlaceHolder": "Search a keyword that best describes your issue"
     },
 	"matchRegEx": "/Microsoft.ContainerService/managedClusters/",
@@ -20,8 +20,8 @@
         {
             "id": "knownissueavailabilityperfaks",
             "name": "Known Issues, Availability and Performance",
-            "description": "This category help address performance issues that are related latency, upgrade, pods, configuration and scale",
-            "keywords": [ "Tiller", "Helm-2  State", "Scale ", "Upgrade", "OOMKilled pod", "CRUD", "Configuration", "Throttling", "IO saturation", "Latency", "Auto-Scalar", "VMSS", "API Server"],
+            "description": "Check your cluster health and investigate performance issues",
+            "keywords": [ "Latency", "Throttling", "Autoscaler", "Helm-2", "Tiller", "OOMKilled", "CRUD"],
             "color": "rgb(186, 211, 245)",
             "createFlowForCategory": true,
             "chatEnabled": false,
@@ -30,8 +30,8 @@
         {
             "id": "connectivityissuesaks",
             "name": "Connectivity Issues",
-            "description": "This category help address networking and connectivity issues on cluster subnet configuration, DNS, FQDN etc.",
-            "keywords": [ "Network Configuration", "Subnet", "DNS", "FQDN", "VNet", "Network Plugin", "Route Table", "Pod CIDR", "CNI", "Ingress", "Load Balancer", "Network Policy", "Public IP", "Pod Connectivity", "CoreDNS"],
+            "description": "Find out networking issues on cluster subnet configuration, DNS, FQDN, etc.",
+            "keywords": [ "VNet", "Network Plugin", "Route Table", "Pod CIDR", "CNI", "Ingress"],
             "color": "rgb(249, 213, 180)",
             "createFlowForCategory": true,
             "chatEnabled": false,
@@ -40,8 +40,8 @@
         {
             "id": "crudaks",
             "name": "Create, Upgrade, Delete and Scale",
-            "description": "Do you have questions during create, upgrade, delete and scale your clusters? Leverage this category to help you move your cluster smoothly",
-            "keywords": [ "Capacity", "Pod Disruption Budgets", "PDB", "Autoscaler ", "CRUD", "Create", "Read", "Upgrade", "Delete", "API Usage", "VMSS"],
+            "description": "Get help on create, upgrade, delete, and scale operations of your cluster",
+            "keywords": [ "Capacity", "Pod Disruption Budgets", "Autoscaler ", "CRUD", "API Usage", "VMSS"],
             "color": "rgb(186, 211, 245)",
             "createFlowForCategory": true,
             "chatEnabled": false,
@@ -50,8 +50,8 @@
         {
             "id": "identitysecurityaks",
             "name": "Identity and Security",
-            "description": "Do you have troubles on identity and security configurations or issues? Check here out to find solutions that help you solve AAD, Certificate, Access or Identity problems.",
-            "keywords": [ "AAD", "Certificates", "RBAC", "Identity", "Security", "Access", "CVE", "Pod identity"],
+            "description": "Find solutions to AAD, Certificate, Access, or Identity problems",
+            "keywords": [ "AAD", "Certificates", "RBAC", "Access", "CVE", "Pod identity"],
             "color": "rgb(186, 211, 245)",
             "createFlowForCategory": true,
             "chatEnabled": false,
@@ -60,8 +60,8 @@
         {
             "id": "riskassessmentaks",
             "name": "Best Practices",
-            "description": "This category is showing you best practices for your clusters on auto-scalling, manage security policies, set up DNS and subnets, configure route table and IP ranges, etc..",
-            "keywords": [ "Auto-Scaling", "Load Balancer", "Node Health", "Scaling", "CRUD", "CIDR", "Private IP", "ContainerD", "Version", "Reserved Address Ranges", "Subnet Sharing", "Route table"],
+            "description": "Analyze your cluster for optimal configuration and performance",
+            "keywords": [ "Auto-Scaling", "Load Balancer", "Node Health", "Scaling", "CRUD", "CIDR"],
             "color": "rgb(186, 211, 245)",
             "createFlowForCategory": true,
             "chatEnabled": false,
@@ -70,8 +70,8 @@
         {
             "id": "nodehealthaks",
             "name": "Node Health",
-            "description": "Is your cluster experiencing failures or unresponsiveness on nodes? Investigate and discover issues that related to nodes, node pools, etc..",
-            "keywords": [ "Node CPU", "Node Readiness", "Node Health", "CPU Utlization", "Memory", "Disk", "DIsk Quques", "IOPS", "Events", "Memory Consumption" ],
+            "description": "Troubleshoot failures or unresponsiveness on nodes",
+            "keywords": [ "Node CPU", "Node Readiness", "Node Health", "Memory", "Disk", "IOPS", "Events"],
             "color": "rgb(186, 211, 245)",
             "createFlowForCategory": true,
             "chatEnabled": false,
