--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
@@ -8,7 +8,7 @@
 	"searchSuffix": "Spring",
 	"azureServiceName": "Azure Spring Cloud",
 	"armApiConfig": {
-		"armApiVersion": "2019-05-01-preview"
+		"armApiVersion": "2020-07-01"
 	},
 	"isSearchEnabled": true,
 	"keystoneDetectorId": "",
